# CMakeList.txt: proyecto de CMake para Ejercicios_POO1, incluya el origen y defina
# la lógica específica del proyecto aquí.
#
cmake_minimum_required (VERSION 3.8)

# Agregue un origen al ejecutable de este proyecto.
add_executable (Ejercicios_POO1 "Ejercicios_POO1.cpp" "Ejercicios_POO1.h")

# TODO: Agregue pruebas y destinos de instalación si es necesario.
